K8S/Deployment-1/microservices-nodeport-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: dataselector-nodeport-service
spec:
  type: NodePort
  selector:
    app: dataselector
  ports:
    - name: http
      protocol: TCP
      port: 80
    - name: https
      protocol: TCP
      port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: todo-list-manager-nodeport-service
spec:
  type: NodePort
  selector:
    app: todo-list-manager
  ports:
    - name: http
      protocol: TCP
      port: 80
    - name: https
      protocol: TCP
      port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-nodeport-service
spec:
  type: NodePort
  selector:
    app: mongodb
  ports:
    - name: mongodb
      protocol: TCP
      port: 27017
