K8S/Deployment-1/ingress-server.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-server
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: localhost.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-list-manager-clusterip-service
                port:
                  number: 80
